# rules_python_gazelle_repro

./: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE  gazelle_python.yaml  go.mod  go.sum  requirements.txt
go/hello/: BUILD.bazel  main.go
python/: BUILD.bazel
python/hello/: BUILD.bazel  __main__.py
python/hello/src/: src.py
